<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".MenuActivity">


    <android.support.design.button.MaterialButton
        android:id="@+id/onegame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_player"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="onClick"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@id/twogame"
        app:layout_constraintTop_toTopOf="parent"
         />

    <android.support.design.button.MaterialButton
        android:id="@+id/twogame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/two_players"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="onClick"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@id/tools"
        app:layout_constraintTop_toBottomOf="@id/onegame" />

    <android.support.design.button.MaterialButton
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tools"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="onClick"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@id/help"
        app:layout_constraintTop_toBottomOf="@id/twogame" />

    <android.support.design.button.MaterialButton
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="onClick"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@id/exit"
        app:layout_constraintTop_toBottomOf="@id/tools" />

    <android.support.design.button.MaterialButton
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="onClick"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help" />
</android.support.constraint.ConstraintLayout>